--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,15 @@
   </head>
 
   <body>
+
+  <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1471445281684-fdf28e036aa8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjF9&auto=format&fit=crop&w=2001&q=80);">
+    <div class="container">
+      <h1>Berlin Bar</h1>
+      <p>Enjoy the world's finest cocktails.</p>
+    </div>
+  </div>
+
+
     <%= yield %>
   </body>
 </html>
