--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -8,3 +8,12 @@ $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
+
+
+$rich-black-fogra-29: hsla(211, 53%, 11%, 1);
+$oxford-blue: hsla(219, 37%, 17%, 1);
+$bdazzled-blue: hsla(212, 29%, 36%, 1);
+$shadow-blue: hsla(214, 23%, 56%, 1);
+$platinum: hsla(75, 6%, 87%, 1);
+$background_picture: rgb(18, 26, 33);
+
