--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,22 +1,27 @@
-<h1>Fancy Cocktails</h1>
+<h1>Our famous drinks</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-      <% @cocktails.each do |cocktail| %>
-        <tr>
-          <td><%= cocktail.name %></td>
-          <td><%= link_to 'Show', cocktail %></td>
-        </tr>
-      <% end %>
-  </tbody>
-</table>
+<div class="container-fluid">
+  <div class="row">
+    <% @cocktails.each do |cocktail| %>
+      <div class="col-12 col-md-4 mb-4">    
+        <div class="card">
+          <img src="https://images.unsplash.com/photo-1470337458703-46ad1756a187?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1949&q=80" class="card-img-top" alt="Cocktail Example">
+          <div class="card-body">
+            <h5 class="card-title"><%= cocktail.name %></h5>
+            <p class="card-link">
+              <%= link_to 'Show more', cocktail, class: 'card-link' %>
+            </p>
+          </div>
+        </div>	
+      </div>
+    <% end %>
+  </div>
+</div>
 
 <br>
-<%= link_to 'New Cocktail', new_cocktail_path %>
+
+<div class=link>
+  <%= link_to 'New Cocktail', new_cocktail_path, class: "btn btn-light" %>
+</div>
+<br>
+
