--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -5,7 +5,8 @@
     <% @cocktails.each do |cocktail| %>
       <div class="col-12 col-md-4 mb-4">    
         <div class="card">
-          <img src="https://images.unsplash.com/photo-1470337458703-46ad1756a187?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1949&q=80" class="card-img-top" alt="Cocktail Example">
+          <%= cl_image_tag("bar",
+      width: 150, height: 150, crop: :thumb, gravity: :face) %>
           <div class="card-body">
             <h5 class="card-title"><%= cocktail.name %></h5>
             <p class="card-link">
