--- a/app/views/cocktails/_form.html.erb
+++ b/app/views/cocktails/_form.html.erb
@@ -7,6 +7,10 @@
     <%= f.input :name %>
   </div>
 
+ <div class="form-photos">
+    <%= f.input :photos, as: :file, input_html: { multiple: true } %>
+  </div>
+
   <div class="form-actions">
     <%= f.button :submit %>
   </div>
