--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -5,8 +5,11 @@
     <% @cocktails.each do |cocktail| %>
       <div class="col-12 col-md-4 mb-4">    
         <div class="card">
-          <%= cl_image_tag("bar",
-      width: 150, height: 150, crop: :thumb, gravity: :face) %>
+          <% if cocktail.photos.attached? %>
+            <%= cl_image_tag cocktail.photos.first.key, class: "card-img-top" %>
+          <% else %>
+           <img src="https://images.unsplash.com/photo-1470337458703-46ad1756a187?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1949&q=80" class="card-img-top" alt="Cocktail Example">
+          <% end %>
           <div class="card-body">
             <h5 class="card-title"><%= cocktail.name %></h5>
             <p class="card-link">
