--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -3,7 +3,7 @@
 
   <%= render 'form', cocktail: @cocktail %>
 
-  <%= link_to 'Back', cocktails_path %>
+  <%= link_to 'Back', root_path %>
 
 </div>
 
